# VideoFactory

./: .cursorrules  .dockerignore  .env.example  .gitignore  00-PATH-A-多Agent协作实施方案.md  AGENTS.md  AGENTS_aionui_1772781311589.md  CLAUDE.md  Dockerfile  README.md  README_CODEX.md  TODOS.md  WORKFLOW.md  alembic.ini  docker-compose.yml  flow.js  pyproject.toml  railway.toml  requirements.txt
.flowpilot/: EXPERIMENTS.md  memory-df.json  memory.json  vectors.json
.video-factory/: worker_heartbeat.json
.workflow/: activated.json  config.json  loop-state.json  progress.md  tasks.md
alembic/: env.py
api/: auth.py  rate_limit.py  server.py
config/: settings.example.yaml
governance/: AGENT_CONSTITUTION.md  QUALITY_GATES.md  WORKFLOW_PATH_A.md
plans/: fix-subtitle-segmentation-translation.md
scripts/: backfill_task_project_names.py  check_status.py  edge_tts_proxy.py  groq_whisper_proxy.py  init_github.sh  run_full_pipeline.py  start_all.sh  start_server.py  submit_task.py  test_orchestrator.py  test_setup.py  whisper_proxy.py
tests/: conftest.py  test_analytics.py  test_analytics_api.py  test_api_input_validation.py  test_asr_router.py  test_asr_youtube_subtitle.py  test_async_database.py  test_config_env.py  test_cover_generator.py  test_creation_review_gate.py  test_database_lock.py  test_factory_pipeline_creation.py  test_factory_pipeline_subtitle_only.py  test_global_translation_reviewer.py  test_highlight_detector.py  test_long_video_processor.py  test_metadata_generator.py  test_orchestrator_scope_flow.py  test_platform_base.py  test_platform_bilibili.py  (+33 more)
(+215 files in other folders)
