[project]
name = "video-factory"
version = "0.1.0"
description = "Automated video translation and distribution pipeline"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "lark-oapi>=1.2.0",
    "pyyaml>=6.0",
    "aiofiles>=23.2.1",
    "ffmpeg-python>=0.2.0",
    "opencv-python>=4.8.0",
    "scenedetect>=0.6.0",
    "librosa>=0.10.0",
    "ultralytics>=8.0.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
